--- a/arch/arm64/configs/lavender_halium_defconfig
+++ b/arch/arm64/configs/lavender_halium_defconfig
@@ -147,7 +147,7 @@ CONFIG_CGROUP_DEVICE=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
-# CONFIG_CGROUP_SCHEDTUNE is not set
+CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
 CONFIG_CGROUP_PERF=y
 CONFIG_CGROUP_SCHED=y
